# midori

./: .gitignore  Cargo.toml  Dockerfile  config.ron  cors.py  readme.md
migrations/: 0001-init.sql
src/: error.rs  helpers.rs  main.rs
src/jobs/: filesystem.rs  mod.rs  queue_torrent.rs
src/jobs/transcode/: av1.rs  avc.rs  mod.rs  process.rs
src/services/: db.rs  job.rs  mod.rs
