[package]
name = "midori"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal", "macros", "parking_lot", "fs"] }
axum = "0.7.5"
qbit-api-rs = "0.2.0"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
typetag = "0.2.16"
thread_local = "1.1.8"
rusqlite = { version = "0.31.0", features = ["bundled", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.80"
rand = "0.8.5"
futures = "0.3.30"
dotenvy = "0.15.7"
thiserror = "1.0.61"
